Builds failing when ENABLE_MODEL_PROCESS is defined https://bugs.webkit.org/show_bug.cgi?id=297129 rdar://157866542

Unreviewed build fix

Speculative build fix. Convert `documentPoint` to a `LayoutPoint`
when passing to `prepareMouseEvent`.

* Source/WebCore/page/ios/EventHandlerIOS.mm:
(WebCore::EventHandler::requestInteractiveModelElementAtPoint):

Canonical link: https://commits.webkit.org/298407@main